@@ -34,6 +34,7 @@ Examples
 Available bellows tasks:
 
 	Tasks:
+	  bellows fire PROJECT   # Run jobs for reviews without results.
 	  bellows help [TASK]     # Describe available tasks or one specific task
 	  bellows purge PROJECT   # Purge merged reviews from SmokeStack
 	  bellows sync PROJECT    # Create tests & update refspecs for active reviews.
@@ -49,6 +50,10 @@ Purge 'merged' reviews from SmokeStack:
 Sync test suite choices for active reviews in SmokeStack (based on the selections in your .bellows.conf file):
 
 	bellows sync nova --all
+
+Fire tests for reviews without results (3 at a time):
+
+	bellows fire nova --limit=3
 
 All commands support creating and maintaining test configs for nova, glance, and keystone.
 
