@@ -3,9 +3,13 @@ require 'json'
 module Bellows
   class Gerrit
 
+    def self.run_cmd(command)
+      return %x{ssh review gerrit #{command}}
+    end
+
     def self.reviews(project, status="open", branch="master")
       reviews = []
-      out=%x{ssh review gerrit query "status: #{status}" --current-patch-set --format JSON}
+      out=Gerrit.run_cmd(%{query "status: #{status}" --current-patch-set --format JSON})
       out.each_line do |line|
         data = JSON.parse(line)
         if data['project'] and data['project'] == "openstack/#{project}" and data['branch'] and data['branch'] == branch
