@@ -1,0 +1,2 @@
+{"project":"openstack/nova","branch":"master","id":"I111111185925d2bab882a34c237819b51838dfae","number":"1234","subject":"Test branch 1","owner":{"name":"Dan Prince","email":"dan.prince@rackspace.com","username":"dprince"},"url":"https://review.openstack.org/1234","lastUpdated":1321970185,"sortKey":"001937240000072e","open":true,"status":"NEW","currentPatchSet":{"number":"1","revision":"1234567b2f935a0626b8de75360ce5d15f01758c","ref":"refs/changes/38/1234/1","uploader":{"name":"Dan Prince","email":"dan.prince@rackspace.com","username":"dprince"},"approvals":[{"type":"CRVW","description":"Code Review","value":"2","grantedOn":1321970185,"by":{"name":"Jimmy Barnes","email":"jimmy.barnes@openstack.com","username":"jbarnes"}},{"type":"CRVW","description":"Code Review","value":"1","grantedOn":1321942411,"by":{"name":"John Smith","email":"john.smith@openstack.org","username":"jsmity"}}]}}
+{"project":"openstack/nova","branch":"master","id":"I222222285925d2bab882a34c237819b51838dfae","number":"5678","subject":"Test branch 2","owner":{"name":"Dan Prince","email":"dan.prince@rackspace.com","username":"dprince"},"url":"https://review.openstack.org/5678","lastUpdated":1321970185,"sortKey":"001937240000072e","open":true,"status":"NEW","currentPatchSet":{"number":"1","revision":"zzzzzzzb2f935a0626b8de75360ce5d15f01758c","ref":"refs/changes/38/5678/1","uploader":{"name":"Dan Prince","email":"dan.prince@rackspace.com","username":"dprince"},"approvals":[{"type":"CRVW","description":"Code Review","value":"2","grantedOn":1321970185,"by":{"name":"Jimmy Barnes","email":"jimmy.barnes@openstack.com","username":"jbarnes"}},{"type":"CRVW","description":"Code Review","value":"1","grantedOn":1321942411,"by":{"name":"John Smith","email":"john.smith@openstack.org","username":"jsmity"}}]}}
