@@ -1,0 +1,44 @@
+[
+    {
+        "job_unit_tester": {
+            "config_template_id": null,
+            "created_at": "2011-11-28T16:40:43-05:00",
+            "id": 4182,
+            "job_group_id": 2601,
+            "msg": null,
+            "nova_revision": "1234567",
+            "glance_revision": "1a2b3c4",
+            "keystone_revision": "4a5b7c7",
+            "status": "Success",
+            "updated_at": "2011-11-28T16:40:15-05:00"
+        }
+    },
+    {
+        "job_xen_hybrid": {
+            "config_template_id": 4,
+            "created_at": "2011-11-28T16:40:43-05:00",
+            "id": 4181,
+            "job_group_id": 2601,
+            "msg": null,
+            "nova_revision": "1234567",
+            "glance_revision": "1a2b3c4",
+            "keystone_revision": "4a5b7c7",
+            "status": "Success",
+            "updated_at": "2011-11-28T16:40:43-05:00"
+        }
+    },
+    {
+        "job_vpc": {
+            "config_template_id": 1,
+            "created_at": "2011-11-28T16:40:42-05:00",
+            "id": 4180,
+            "job_group_id": 2601,
+            "msg": null,
+            "nova_revision": "1234567",
+            "glance_revision": "1a2b3c4",
+            "keystone_revision": "4a5b7c7",
+            "status": "Success",
+            "updated_at": "2011-11-28T16:40:46-05:00"
+        }
+    }
+]
