@@ -1,0 +1,3 @@
+[{"smoke_test":{"cookbook_url":"","created_at":"2011-09-27T14:51:35-04:00","description":"Nova trunk","id":331,"status":"Success","unit_tests":false,"updated_at":"2011-12-03T15:09:01-05:00","nova_package_builder":{"branch":"master","created_at":"2011-09-27T14:51:35-04:00","id":681,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-09-27T14:51:35-04:00","url":"git://github.com/openstack/nova.git"},"glance_package_builder":{"branch":"master","created_at":"2011-09-27T14:51:35-04:00","id":682,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-10-26T13:07:10-04:00","url":"git://github.com/openstack/glance.git"},"keystone_package_builder":{"branch":"master","created_at":"2011-09-27T14:51:35-04:00","id":683,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-09-27T14:51:35-04:00","url":"git://github.com/openstack/keystone.git"}}},
+{"smoke_test":{"cookbook_url":"","created_at":"2011-09-27T14:51:35-04:00","description":"Test 1","id":331,"status":"Pending","unit_tests":false,"updated_at":"2011-12-03T15:09:01-05:00","nova_package_builder":{"branch":"refs/changes/38/5678/1","created_at":"2011-09-27T14:51:35-04:00","id":681,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-09-27T14:51:35-04:00","url":"git://github.com/openstack/nova.git"},"glance_package_builder":{"branch":"master","created_at":"2011-09-27T14:51:35-04:00","id":682,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-10-26T13:07:10-04:00","url":"git://github.com/openstack/glance.git"},"keystone_package_builder":{"branch":"master","created_at":"2011-09-27T14:51:35-04:00","id":683,"merge_trunk":false,"packager_url":"","revision_hash":"","smoke_test_id":331,"updated_at":"2011-09-27T14:51:35-04:00","url":"git://github.com/openstack/keystone.git"}}}
+]
