@@ -1,6 +1,7 @@
 require 'rubygems'
 require 'bundler'
 require 'thor'
+
 begin
   Bundler.setup(:default, :development)
 rescue Bundler::BundlerError => e
@@ -13,6 +14,12 @@ require 'test/unit'
 $LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
 $LOAD_PATH.unshift(File.dirname(__FILE__))
 require 'bellows'
+require 'mocha'
 
-class Test::Unit::TestCase
+def fixture_path
+  File.expand_path("../fixtures", __FILE__)
+end
+
+def fixture(file)
+  File.read(fixture_path + '/' + file)
 end
